--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,67 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width:100%;
-    height: 20px;
-    background-color: blue;
-    text-align: center;
-    color: white;
-}
 html, body { height: 100%; }
-
+#mainContent{
+    border-radius: 25px;
+    padding: 12px 15px;
+    background-color: rgb(220,220, 220);
+  }
+  * {
+    font-family: sans-serif; /* Change your font family */
+  }
+  
+  .content-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    min-width: 400px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  }
+  
+  .content-table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+  }
+  
+  .content-table th,
+  .content-table td {
+    padding: 12px 15px;
+  }
+  
+  .content-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+  }
+  
+  .content-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+  }
+  
+  .content-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+  }
+  
+  .content-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+  }
+  .mat-paginator,.mat-header-row{
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+    font-family: sans-serif;
+  }
+  .bg-primary{
+    background-color: #009879!important;
+  }
+  .label-text {
+    font-size: 1rem;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-left:5px;
+}
