--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -1,30 +1,30 @@
-<div class="col-md-6 offset-md-3">
-    <h3> Create Employee </h3>
+<div class="col-6 offset-3">
     <form (ngSubmit) = "onSubmit()">
     
         <div class="form-group">
-            <label class="form-label"> Id </label>
+            <label class="form-label label-text"> ID </label>
             <input type="text" class ="form-control" id = "id"
                 [(ngModel)] = "employee.id" name = "id">
         </div>
+        
         <div class="form-group">
-            <label class="form-label"> Login </label>
+            <label class="form-label label-text"> Login </label>
             <input type="text" class ="form-control" id = "login"
                 [(ngModel)] = "employee.login" name = "login">
         </div>
         <div class="form-group">
-            <label class="form-label"> Name </label>
+            <label class="form-label label-text"> Name </label>
             <input type="text" class ="form-control" id = "name"
                 [(ngModel)] = "employee.name" name = "name">
         </div>
     
         
         <div class="form-group">
-            <label class="form-label"> Salary </label>
-            <input type="text" class ="form-control" id = "salary"
+            <label class="form-label label-text"> Salary </label>
+            <input type="number" class ="form-control" id = "salary"
                 [(ngModel)] = "employee.salary" name = "salary">
         </div>
-        <div class="form-group">
+        <div class="form-group" style="justify-content: center!important;">
         <button class = "btn btn-success" type ="submit">Create</button>
         </div>
     </form>
