[added] pagination datatables integrating with backend and ui modification

--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,8 +1,75 @@
 <div class="container">
-    <input type="text" class ="form-control" id = "minSalary" name = "minSalary">
-<input type="text" class ="form-control" id = "maxSalary" name = "maxSalary">
-</div>
+    
+    <div class="row">
 
+        <div class="col-12" style="margin-top: 25px;">
+
+            <div class="row">
+                <div class="form-group col-5">
+                    <div class="text-group">
+                        <input type="number" class="form-label form-control" (keypress)="onSearchChange($event)"
+                            id="minSalary" name="minSalary" placeholder="Minimum Salary"
+                            #minimumSalary>
+                    </div>
+                </div>
+
+                <div class="form-group col-5">
+                    <div class="text-group">
+                        <input type="number" class="form-label form-control" (keypress)="onSearchChangeMax($event)"
+                            id="maxSalary" name="maxSalary" placeholder="Maximum Salary" #maximumSalary>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="spinner-container" *ngIf="employeeDataSource.loading$ | async">
+                <mat-spinner #busy></mat-spinner>
+            </div>
+            <mat-table class="table table-striped" [dataSource]="employeeDataSource" matSort matSortActive="id"
+                matSortDirection="asc" matSortDisableClear>>
+
+                <ng-container matColumnDef="id">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>id</mat-header-cell>
+                    <mat-cell class="description-cell" *matCellDef="let employee">{{employee.id}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="name">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+                    <mat-cell class="description-cell" *matCellDef="let employee">{{employee.name}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="login">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Login</mat-header-cell>
+                    <mat-cell class="duration-cell" *matCellDef="let employee">{{employee.login}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="salary">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Salary</mat-header-cell>
+                    <mat-cell class="duration-cell" *matCellDef="let employee">{{employee.salary}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell class="duration-cell" *matCellDef="let employee"> <button
+                            (click)="updateEmployee(employee.id)" style="background-color: #09755fb5;--bs-btn-border-color: #09755fb5;" class="btn btn-info"><i class="fa fa-edit"></i></button>
+                        
+                            <button (click)="deleteEmployee(employee.id)" class="btn btn-danger"
+                            style="margin-left: 5px;background-color: #ff0000b5;"><i class="fa fa-trash"></i></button>
+                        <button (click)="employeeDetails(employee.id)" class="btn btn-info" style="margin-left: 5px;--bs-btn-border-color: #09755fb5;background-color: #09755fb5;">
+                            <i class="fa fa-info"></i></button>
+                    </mat-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+
+                <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+            </mat-table>
+            <mat-paginator [length]="employeeDataSource.totalEmployees" [pageSize]="employeesPerPage"
+                [pageSizeOptions]="[10]"></mat-paginator>
+
+        </div>
+    </div>
+
+</div>
+<!--
 <table class="table table-striped">
     <thead>
         <tr>
@@ -21,7 +88,7 @@
             <td>{{employee.salary}}</td>
             <td>
                 <button (click) = "updateEmployee(employee.id)" class = "btn btn-info"> Update</button>
-                <button (click) = "deleteEmployee(employee.id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
+                <button (click) = "deleteEmployee(employee.id)" class = "btn btn-danger" style="margin-left: 10px;">Delete</button>
                 <button (click) = "employeeDetails(employee.id)" class = "btn btn-info" style="margin-left: 10px"> View</button>
             </td>
         </tr>
@@ -29,4 +96,4 @@
 </table>
 <div class="justify-center">
     <pagination-controls (pageChange)="p= $event"></pagination-controls>
-</div>
+</div>-->
