--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,20 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-  <ul class = "navbar-nav">
-      <li class = "nav-item">
-          <a routerLink="employees" routerLinkActive="active" class="nav-link"  i18n>Employee List</a>
-      </li>
-      <li class = "nav-item">
-          <a routerLink="create-employee" routerLinkActive="active" class="nav-link"  i18n>Add Employee</a>
-      </li>
-      <li class = "nav-item">
-        <a routerLink="importcsv" routerLinkActive="active" class="nav-link"  i18n>Import CSV</a>
-    </li>
-  </ul>
-</nav>
 
-<h1 class="text-center"> {{title}} </h1>
 <div class = "container">
+  <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <ul class="navbar-nav">
+      <img src="../assets/company.png" alt="@Company" width="70" height="70"
+							style="margin-left:22px;border-radius: 15px;" />
+        <li class="nav-item">
+            <a routerLink="employees" routerLinkActive="active" class="nav-link" i18n>Employee List</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="create-employee" routerLinkActive="active" class="nav-link" i18n>Add Employee</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="importcsv" routerLinkActive="active" class="nav-link" i18n>Import CSV</a>
+        </li>
+    </ul>
+
+</nav>
   <router-outlet></router-outlet>
 </div>
-<footer class = "footer">
-  <div class = "container">
-      <span>All Rights Reserved 2023 @Company</span>
-  </div>
-</footer>
