--- a/src/app/update-employee/update-employee.component.html
+++ b/src/app/update-employee/update-employee.component.html
@@ -1,27 +1,26 @@
-<div class="col-md-6 offset-md-3">
-    <h3> Update Employee </h3>
+<div class="col-6 offset-3">
     <form (ngSubmit) = "onSubmit()">
-    
         <div class="form-group">
-            <label> Id </label>
+            <label class="form-label label-text"> ID </label>
             <input type="text" class ="form-control" id = "id"
                 [(ngModel)] = "employee.id" name = "id">
         </div>
+        
         <div class="form-group">
-            <label> Login </label>
+            <label class="form-label label-text"> Login </label>
             <input type="text" class ="form-control" id = "login"
                 [(ngModel)] = "employee.login" name = "login">
         </div>
         <div class="form-group">
-            <label> Name </label>
+            <label class="form-label label-text"> Name </label>
             <input type="text" class ="form-control" id = "name"
                 [(ngModel)] = "employee.name" name = "name">
         </div>
     
         
         <div class="form-group">
-            <label> Salary </label>
-            <input type="text" class ="form-control" id = "salary"
+            <label class="form-label label-text"> Salary </label>
+            <input type="number" class ="form-control" id = "salary"
                 [(ngModel)] = "employee.salary" name = "salary">
         </div>
         <button class = "btn btn-success" type ="submit">Update</button>
